--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8" />
+
+  <meta name="description" content="In line with the upcoming College Day 2018, one of the activities of the Information Technology Students Association is the League of Legends Tournament.">
+  <meta name="image" content="https://leagueoflegends.stinovaliches.edu.ph/assets/img/og.jpg">
+  <meta itemprop="name" content="ITSA League of Legends Tournament">
+  <meta itemprop="description" content="In line with the upcoming College Day 2018, one of the activities of the Information Technology Students Association is the League of Legends Tournament.">
+  <meta itemprop="image" content="https://leagueoflegends.stinovaliches.edu.ph/assets/img/og.jpg">
+  <meta name="og:title" content="ITSA League of Legends Tournament">
+  <meta name="og:description" content="In line with the upcoming College Day 2018, one of the activities of the Information Technology Students Association is the League of Legends Tournament.">
+  <meta name="og:image" content="https://leagueoflegends.stinovaliches.edu.ph/assets/img/og.jpg">
+  <meta name="og:url" content="https://leagueoflegends.stinovaliches.edu.ph/">
+  <meta name="og:site_name" content="ITSA League of Legends Tournament">
+  <meta name="og:type" content="website">
+
   <title>ITSA League of Legends Tournament - STI College Novaliches College Day 2018</title>
 
   <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css">
@@ -64,19 +77,19 @@
       <h1 class="title">Registration</h1>
 
       <ol class="text">
-        <li>Register your team at the online registration form.</li>
+        <li><a href="/register">Register your team online.</a></li>
         
         <li>
           Obtain an endorsement paper from ITSA Secretary Stephan Nicole Portuguez.
 
           <ul>
-            <li>You may also download the endorsement letter and print your own copy.</li>
+            <li>You may also <a href="/files/LoL-Tournament-Student-Endorsement-Letter.pdf">download the endorsement letter</a> and print your own copy.</li>
           </ul>
         </li>
         
         <li>Complete the required information from the endorsement letter and obtain three signatures from your instructors.</li>
 
-        <li>Submit the endorsement letter to ITSA Secretary Stephan Nicole Portuguez and pay the P50/player registration fee.</li>
+        <li>Submit the endorsement letter to ITSA Secretary Stephan Nicole Portuguez and pay the P50 per player registration fee.</li>
 
         <li>You will receive an email once we confirm your registration.</li>
       </ol>
