--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8" />
-
+  <meta name=viewport content="width=device-width,initial-scale=1">
   <meta name="description" content="In line with the upcoming College Day 2018, one of the activities of the Information Technology Students Association is the League of Legends Tournament.">
   <meta name="image" content="https://leagueoflegends.stinovaliches.edu.ph/assets/img/og.jpg">
   <meta itemprop="name" content="ITSA League of Legends Tournament">
   <meta itemprop="description" content="In line with the upcoming College Day 2018, one of the activities of the Information Technology Students Association is the League of Legends Tournament.">
   <meta itemprop="image" content="https://leagueoflegends.stinovaliches.edu.ph/assets/img/og.jpg">
-  <meta name="og:title" content="ITSA League of Legends Tournament">
-  <meta name="og:description" content="In line with the upcoming College Day 2018, one of the activities of the Information Technology Students Association is the League of Legends Tournament.">
-  <meta name="og:image" content="https://leagueoflegends.stinovaliches.edu.ph/assets/img/og.jpg">
-  <meta name="og:url" content="https://leagueoflegends.stinovaliches.edu.ph/">
-  <meta name="og:site_name" content="ITSA League of Legends Tournament">
-  <meta name="og:type" content="website">
+  <meta property="og:title" content="ITSA League of Legends Tournament">
+  <meta property="og:description" content="In line with the upcoming College Day 2018, one of the activities of the Information Technology Students Association is the League of Legends Tournament.">
+  <meta property="og:image" content="https://leagueoflegends.stinovaliches.edu.ph/assets/img/og.jpg">
+  <meta property="og:url" content="https://leagueoflegends.stinovaliches.edu.ph/">
+  <meta property="og:site_name" content="ITSA League of Legends Tournament">
+  <meta property="og:type" content="website">
 
   <title>ITSA League of Legends Tournament - STI College Novaliches College Day 2018</title>
 
