Add cash prize to champion

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <h1 class="title">Prizes</h1>
 
       <ul class="text">
-        <li><strong>1st Place</strong> - 500 RP per player</li>
+        <li><strong>1st Place</strong> - 500 RP per player + P1000 cash prize</li>
         <li><strong>2nd Place</strong> - 400 RP per player</li>
         <li><strong>3rd Place and 4th Place</strong> - 300 RP per player</li>
         <li><strong>5th Place to 8th Place</strong> - 200 RP per player</li>
