Add sponsor note

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
         <li><strong>3rd Place and 4th Place</strong> - 300 RP per player</li>
         <li><strong>5th Place to 8th Place</strong> - 200 RP per player</li>
       </ul>
+
+      <p class="text">RP prizes are courtesy of Garena Philippines.</p>
     </div>
   </div>
 
