--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/skeleton.css">
-  <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/style.css?12">
 </head>
 <body>
   <div class="header-overlap">
